# Invoke

./: .gitignore  README.md  agentify.py  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
invoke/: __init__.py  deploy.py  sandbox.py
invoke/cli/: __init__.py  deploy.py
invoke/onyx/: __init__.py  analyzer.py  worker.py
invoke/sdk/: __init__.py  trace_wrapper.py
invoke/storage/: __init__.py  modal_store.py  traces.py
invoke/supervisor/: __init__.py  monitor.py
invoke/templates/: agent.py
invoke/templates/claude-agent-sdk/: invoke.json  package.json  tsconfig.json
invoke/templates/claude-agent-sdk/src/: index.ts
invoke/templates/gemini-agent/: invoke.json  package.json
invoke/templates/gemini-agent/src/: index.ts
tests/node/: invoke-cli.test.js
