[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoke-cli"
version = "0.1.0"
description = "Generate Invoke-ready MCP wrappers for PostgreSQL, OpenAPI, and SaaS apps."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Joel George", email = "joel@invokehq.run"}
]
keywords = ["mcp", "ai-agents", "llm", "automation", "gateway"]
dependencies = [
    "httpx>=0.24.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
invoke = "agentify:main"
agentify = "agentify:main"

[tool.setuptools]
py-modules = ["agentify"]
packages = ["invoke", "invoke.cli", "invoke.onyx", "invoke.sdk", "invoke.storage", "invoke.supervisor"]

[tool.setuptools.package-data]
invoke = [
    "templates/agent.py",
    "templates/claude-agent-sdk/*",
    "templates/claude-agent-sdk/src/*",
    "templates/gemini-agent/*",
    "templates/gemini-agent/src/*",
]
